[tool.poetry]
name = "blab-chatbot-haystack"
version = "0.0.1dev"
description = ""
authors = ["C4AI"]
readme = "README.md"
#packages = [{include = "blab_chatbot_haystack"}]

[tool.poetry.dependencies]
python = "^3.10"
farm-haystack = "^1.8.0"
Flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
darglint = "^1.8.1"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.8.23"
python-lsp-server = "^1.5.0"
pyupgrade = "^2.37.3"
mypy = "^0.971"
pre-commit = "^2.20.0"
black = {extras = ["d"], version = "^22.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[[tool.mypy.overrides]]
module = "haystack.*"
ignore_missing_imports = true
