[tool.poetry]
name = "blab-chatbot-haystack"
version = "0.0.1dev"
description = ""
authors = ["C4AI"]
readme = "README.md"
#packages = [{include = "blab_chatbot_haystack"}]

[tool.poetry.dependencies]
python = "^3.8"
farm-haystack = "^1.8.0"
Flask = "^2.2.2"
colorama = "^0.4.5"
protobuf = ">=3.20.0,<3.21.0"
datasets = "^2.5.1"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
darglint = "^1.8.1"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.8.23"
python-lsp-server = "^1.5.0"
pyupgrade = "^2.37.3"
mypy = "^0.971"
pre-commit = "^2.20.0"
black = {extras = ["d"], version = "^22.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "haystack.*"
ignore_missing_imports = true
